[gd_scene load_steps=10 format=2]

[ext_resource path="res://dialogs/DialogBackdrop.tscn" type="PackedScene" id=1]
[ext_resource path="res://dialogs/DialogBackground.tres" type="Texture" id=2]
[ext_resource path="res://theme/blue_button_pressed.tres" type="StyleBox" id=3]
[ext_resource path="res://assets/font/font.tres" type="DynamicFont" id=4]
[ext_resource path="res://theme/blue_button.tres" type="StyleBox" id=5]
[ext_resource path="res://dialogs/GameResult.gd" type="Script" id=6]
[ext_resource path="res://assets/images/you-win-1.png" type="Texture" id=7]
[ext_resource path="res://assets/font/ethnocentric rg.tres" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 8 )

[node name="GameResult" type="Popup"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
input_pass_on_modal_close_click = false
script = ExtResource( 6 )

[node name="DialogBackdrop" parent="." instance=ExtResource( 1 )]

[node name="Bg" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -475.0
margin_top = -325.0
margin_right = 475.0
margin_bottom = 325.0
rect_min_size = Vector2( 950, 650 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 7

[node name="WinnerBox" type="VBoxContainer" parent="Bg"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -300.0
margin_right = 400.0
margin_bottom = 300.0
rect_min_size = Vector2( 800, 600 )
custom_constants/separation = 40
alignment = 1

[node name="Header" type="Label" parent="Bg/WinnerBox"]
margin_top = 12.0
margin_right = 800.0
margin_bottom = 133.0
rect_min_size = Vector2( 400, 75 )
custom_colors/font_color = Color( 0, 0.576471, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Congratulations!
Congrats!"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="Bg/WinnerBox"]
margin_top = 173.0
margin_right = 800.0
margin_bottom = 398.0
rect_min_size = Vector2( 400, 225 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="CC" type="CenterContainer" parent="Bg/WinnerBox"]
margin_top = 438.0
margin_right = 800.0
margin_bottom = 588.0
rect_min_size = Vector2( 300, 100 )

[node name="CloseButton" type="Button" parent="Bg/WinnerBox/CC"]
margin_left = 200.0
margin_right = 600.0
margin_bottom = 150.0
rect_min_size = Vector2( 400, 150 )
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 5 )
text = "Close"

[node name="LoserBox" type="VBoxContainer" parent="Bg"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -300.0
margin_right = 400.0
margin_bottom = 300.0
rect_min_size = Vector2( 800, 600 )
custom_constants/separation = 40
alignment = 1

[node name="Header" type="Label" parent="Bg/LoserBox"]
margin_top = 35.0
margin_right = 800.0
margin_bottom = 110.0
rect_min_size = Vector2( 400, 75 )
custom_colors/font_color = Color( 0, 0.576471, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Sorry!"
align = 1
valign = 1

[node name="Label" type="Label" parent="Bg/LoserBox"]
margin_top = 150.0
margin_right = 800.0
margin_bottom = 375.0
rect_min_size = Vector2( 400, 225 )
custom_colors/font_color = Color( 0, 0.576471, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Better luck
next time!"
align = 1
valign = 1

[node name="CC" type="CenterContainer" parent="Bg/LoserBox"]
margin_top = 415.0
margin_right = 800.0
margin_bottom = 565.0
rect_min_size = Vector2( 300, 100 )

[node name="CloseButton" type="Button" parent="Bg/LoserBox/CC"]
margin_left = 200.0
margin_right = 600.0
margin_bottom = 150.0
rect_min_size = Vector2( 400, 150 )
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 5 )
text = "Close"

[node name="Timer" type="Timer" parent="."]

[connection signal="about_to_show" from="." to="." method="_on_GameResult_about_to_show"]
[connection signal="pressed" from="Bg/WinnerBox/CC/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="Bg/LoserBox/CC/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
